--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "npm": ">=6"
   },
   "dependencies": {
+    "@ant-design/icons": "^5.0.1",
     "@emotion/cache": "11.7.1",
     "@emotion/react": "11.7.1",
     "@emotion/styled": "11.6.0",
@@ -26,17 +27,21 @@
     "@testing-library/jest-dom": "5.16.2",
     "@testing-library/react": "12.1.2",
     "@testing-library/user-event": "13.5.0",
+    "antd": "^5.4.5",
     "axios": "^1.3.6",
     "chart.js": "3.4.1",
     "chroma-js": "2.4.2",
+    "mdb": "^0.1.0",
     "prop-types": "15.8.1",
     "react": "17.0.2",
+    "react-bootstrap": "^2.7.4",
     "react-chartjs-2": "3.0.4",
     "react-dom": "17.0.2",
     "react-github-btn": "1.2.1",
-    "react-router-dom": "6.2.1",
+    "react-router-dom": "^6.10.0",
     "react-scripts": "5.0.0",
     "react-table": "7.7.0",
+    "socket.io-client": "^4.6.1",
     "stylis": "4.0.13",
     "stylis-plugin-rtl": "2.1.1",
     "web-vitals": "2.1.4",
