--- a/package.json
+++ b/package.json
@@ -20,6 +20,10 @@
     "@emotion/cache": "11.7.1",
     "@emotion/react": "11.7.1",
     "@emotion/styled": "11.6.0",
+    "@fortawesome/free-solid-svg-icons": "^6.4.0",
+    "@fortawesome/react-fontawesome": "^0.2.0",
+    "@material-ui/core": "^4.12.4",
+    "@material-ui/icons": "^4.11.3",
     "@mui/icons-material": "5.4.1",
     "@mui/material": "5.4.1",
     "@mui/styled-engine": "5.4.1",
@@ -39,11 +43,15 @@
     "react-icons": "^4.8.0",
     "react-infinite-scroll-component": "^6.1.0",
     "react-moment": "^1.1.3",
+    "react-router-bootstrap": "^0.26.2",
     "react-router-dom": "6.2.1",
     "react-scripts": "5.0.0",
     "react-table": "7.7.0",
+    "reactstrap": "^9.1.9",
     "serve": "^14.2.0",
     "stylis": "4.0.13",
+    "sweetalert2": "^11.7.3",
+    "validator": "^13.9.0",
     "web-vitals": "2.1.4",
     "yup": "0.32.11"
   },
