--- a/package.json
+++ b/package.json
@@ -19,10 +19,10 @@
   "dependencies": {
     "@ant-design/icons": "^5.0.1",
     "@emotion/cache": "11.7.1",
-    "@emotion/react": "11.7.1",
-    "@emotion/styled": "11.6.0",
+    "@emotion/react": "^11.7.1",
+    "@emotion/styled": "^11.6.0",
     "@mui/icons-material": "5.4.1",
-    "@mui/material": "5.4.1",
+    "@mui/material": "^5.4.1",
     "@mui/styled-engine": "5.4.1",
     "@testing-library/jest-dom": "5.16.2",
     "@testing-library/react": "12.1.2",
